0.5.2 2016-08-18
        - Made helpers to nested helpers:
          - Rename rabbid_corpus to rabbid->corpus.
          - Rename rabbid_import to rabbid->import.
          - Rename rabbid_init to rabbid->init.

0.5.1 2016-08-13
        - Fixed left extensions for non-context matches.
        - Separation of Rabbid::Collection.

0.5.0 2016-08-12
        - Improved I5 Conversion.
        - Added Guttenberg conversion.
        - Improved conversion tool use different converter.
        - Remove guttenberg conversion tool.
        - Added id_offset parameter to conversion command.
        - Added import_command test.
        - Added conversion to import command.
        - Removed redundant build_db and build_collection_db
          scripts.
        - Added paragraph support to I5 conversion.

0.4.4 2016-08-08
        - Fixed unicode in extensions (retrieve and store).
				- Fixed support for Mojolicious 7.
				- Introduced test suite for JavaScript.
        - Made action buttons dynamic.
				- Fix pagebreaks using json.
				- Added import for i5 documents.

0.4.2 2016-03-21
        - Fixed unicode handling.

0.4.1 2016-03-02
        - Improved support for multi-user plugins.
        - Improved attached database handling.
        - Separated initialization step.

0.4.0 2016-01-12
        - Initial release on GitHub.

0.3.1 2015-09-01
        - First release in KorAP infrastructure.

0.3.0 2015-07-20
        - Decoupled multi-corpora/multi-user configuration.

0.2.1 2015-07-09
        - Added context collapsing.

0.2.0 2015-06-15
        - Added export to RTF.

0.1.1 2015-06-08
        - Initial release.