@@ -3,6 +3,7 @@
           - Rename rabbid_corpus to rabbid->corpus.
           - Rename rabbid_import to rabbid->import.
           - Rename rabbid_init to rabbid->init.
+          - Rename rabbid_collection to rabbid->collection.
 
 0.5.1 2016-08-13
         - Fixed left extensions for non-context matches.
